--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,9 +7,9 @@
 #: characters.
 
 # font_family      FiraCode Nerd Font
-# font_family      JetBrainsMono Nerd Font
+font_family      JetBrainsMono Nerd Font
 # font_family      OperatorMono Nerd Font Book
-font_family      SFMono Nerd Font
+# font_family      SFMono Nerd Font
 # bold_font        auto
 italic_font      OperatorMono Nerd Font Book Italic
 bold_italic_font OperatorMono Nerd Font Medium Italic
@@ -64,7 +64,7 @@ adjust_line_height  4
 #: artifacts).
 
 # symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
-
+symbol_map U+EA60-U+EBBC codicon
 #: Map the specified unicode codepoints to a particular font. Useful
 #: if you need special rendering for some symbols, such as for
 #: Powerline. Avoids the need for patched fonts. Each unicode code
